--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -141,11 +141,11 @@ blockquote pre {
   .language-html,
   .language-jinja,
   .language-xml {
-    background: linear-gradient(#3f396b, #27203a) !important;
+    background: linear-gradient(#383360, #27203a) !important;
     color: #d0e1f6;
 
     .hljs-tag {
-      color: #98bfd4;
+      color: #9cddff;
     }
 
     .hljs-meta {
@@ -153,17 +153,17 @@ blockquote pre {
     }
 
     .hljs-attr {
-      color: #7ab5cf;
+      color: #6ccae4;
     }
 
     .hljs-string {
-      color: #d2c69e;
+      color: #e0cd8e;
       font-weight: 400;
       font-family: 'Hack';
     }
 
     .hljs-name {
-      color: #96a7ff;
+      color: #89a4ff;
     }
     background: #272738;
 
