--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -114,11 +114,11 @@
 
     & > span {
       display: inline-block;
-      color: #5D6178;
+      color: #868892;
       width: fit-content;
       margin-right: 40px;
       margin-bottom: 0;
-      font-weight: 600;
+      font-weight: 100;
 
       .copy {
         opacity: .8;
@@ -131,8 +131,8 @@
       }
 
       a {
-        color: #5D6178;
-        font-weight: 600;
+        color: #868892;
+        font-weight: 100;
 
         &:hover {
           color:@hover-color;
