homepage responsive layout adjustments

--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -95,7 +95,7 @@
     line-height: 1.5;
     font-weight: 100;
     float: left!important;
-    font-size: 0.9em;
+    font-size: 0.85em !important;
     margin: 0 auto !important;
     max-width: 450px;
     padding: 0 25px 30px;
