--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -7,6 +7,10 @@
 	margin-bottom: 40px;
 	background: white;
 	transition: all 0.3s ease-out;
+	@media(max-width: 950px) {
+		 padding: 20px;
+	}
+
 	@media(max-width:800px) {
 		margin-bottom: 30px;
 	}
@@ -211,8 +215,7 @@
 		width: 100%;
 		justify-content: space-between;
 		max-width: 440px;
-		@media(max-width:800px) {
-			max-width: 350px;
+		@media(max-width:1000px) {
 			justify-content: left;
 		}
 		@media(max-width:600px) {
@@ -273,9 +276,8 @@
 			font-size: 16px;
 			padding: 0;
 			margin: auto 20px auto 0;
-			@media(max-width: 800px) {
+			@media(max-width: 1000px) {
 				margin: auto 30px auto 0 !important;
-				font-size: 1em;
 			}
 
 			&:last-of-type {
@@ -313,6 +315,9 @@
 						height: fit-content;
 						margin-right: 8px;
 					}
+				}
+				@media(max-width: 800px){
+					 order: 2;
 				}
 				@media(max-width: 600px) {
 					font-size: 1em;
