--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -270,7 +270,7 @@
 				background: @hover-color;
 				border: 1px solid @hover-color;
 				color: white;
-				box-shadow: 1px 1px 0px #239084;
+				box-shadow: 1px 1px 0 #239084;
 			}
 		}
 	}
@@ -280,8 +280,14 @@
 		width: -webkit-fill-available;
 		width: -moz-available;
 		background: white;
-		padding: 20px 25px 25px;
+		padding: 20px;
 		box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
+		transition: all .3s ease-out;
+
+		@media(max-width: 950px) {
+			 margin-right: 20px !important;
+			 margin-bottom: 20px !important;
+		}
 
 		&:first-of-type {
 			margin-right: 0;
@@ -292,25 +298,25 @@
 			display: flex;
 			margin: 0 !important;
 			height: 35px;
-		  margin: auto;
-		  display: flex;
-		  justify-content: space-between;
+			margin: auto;
+			display: flex;
+			justify-content: space-between;
 
 			.btn {
-			  align-items: center;
-			  justify-content: space-around;
-			  display: inline-flex;
-			  background-color: #fff;
-			  width: 40px;
-			  height: 40px;
-			  line-height: 40px;
-			  margin: 0 3px;
-			  text-align: center;
-			  position: relative;
-			  overflow: hidden;
-			  box-shadow: 0 0 3px 1px rgba(95, 93, 138, 0.15);
-			  opacity: 0.99;
-			  padding: 0;
+				align-items: center;
+				justify-content: space-around;
+				display: inline-flex;
+				background-color: #fff;
+				width: 40px;
+				height: 40px;
+				line-height: 40px;
+				margin: 0 3px;
+				text-align: center;
+				position: relative;
+				overflow: hidden;
+				box-shadow: 0 0 3px 1px rgba(95, 93, 138, 0.15);
+				opacity: 0.99;
+				padding: 0;
 			}
 
 			.fab,
@@ -383,7 +389,6 @@
 			}
 
 			input[type=email] {
-
 				&:after {
 					content: '\f0e0';
 					font-family: "Font Awesome 5 Pro";
@@ -405,7 +410,7 @@
 
 			input[name=name] {
 				&::placeholder {
-					opacity: .8;
+					opacity: 0.8;
 					color: #828294;
 				}
 
@@ -475,7 +480,6 @@
 	}
 
 	.series {
-
 		.seriesitem {
 			transition: all 0.2s ease-out;
 			border-bottom: 1px solid #d5dde8;
@@ -572,6 +576,11 @@
 			svg {
 				width: 24px;
 				margin-right: 15px;
+
+				@media(max-width: 950px) {
+					width: 18px;
+					margin-right: 12px;
+				}
 			}
 		}
 
@@ -612,10 +621,11 @@
 		}
 
 		.series-info {
-			margin-left: 15px;
-			@media(max-width: 1000px) {
+			margin-left: 10px;
+			@media(max-width: 950px) {
 				padding: 5px 0;
 				background: 0;
+				margin-left: 5px;
 			}
 		}
 
@@ -650,284 +660,280 @@
 			display: none;
 		}
 	}
-}
 
-.recent-single-post {
-	.post-title {
-		color: #455f6f;
-		line-height: 1.4;
-		font-size: 15px;
-		margin: 0;
-		font-family: 'AvenirNextLTPro-Regular', sans-serif;
-		display: inline-block;
-
-		&:hover {
-			color: @hover-color;
-		}
-	}
-}
-
-.upcoming {
-	p {
-		margin-bottom: 0;
-	}
-
-	ul {
-		padding: 10px 0 0;
-	}
-}
-
-.text {
-	h1 {
-		font-size: 1.4em;
-		font-weight: 700;
-		margin-bottom: 15px;
-		letter-spacing: 1px;
-		margin-top: 0;
-		white-space: nowrap;
-		font-family: 'AvenirNextLTPro-Medium',serif;
-		@media(max-width: 1040px) {
-			font-size: 1.3em !important;
-		}
-	}
-
-	p {
-		margin: 0;
-		font-size: .9em;
-		line-height: 1.7;
-		padding-right: 0;
-		font-family: 'AvenirNextLTPro-Regular', sans-serif;
-	}
-}
-
-.widget {
-	margin-bottom: 30px;
-	margin-top: 0;
-
-	.post-title {
-		a {
-			color: #208cad;
-			font-family: 'AvenirNextLTPro-Medium',sans-serif;
-			transition: all 0.2s ease;
+	.recent-single-post {
+		.post-title {
+			color: #455f6f;
+			line-height: 1.4;
+			font-size: 15px;
+			margin: 0;
+			font-family: 'AvenirNextLTPro-Regular', sans-serif;
+			display: inline-block;
 
 			&:hover {
-				cursor: pointer;
 				color: @hover-color;
 			}
 		}
 	}
 
-	h1 {
-		margin-bottom: 10px;
-		text-transform: uppercase;
-		font-size: 1.2em;
-		font-family: 'ProductSans-Medium', AvenirNextLTPro-Medium, serif;
-		color: @header-color;
-		font-weight: 500;
-	}
-
-	.sidebar-title,
-	.title {
-		font-size: 1.2em;
-		font-weight: 500;
-		margin-bottom: 8px;
-		text-transform: uppercase;
-		font-family: 'AvenirNextLTPro-Medium',AvenirNextLTPro-Medium,serif;
-		letter-spacing: 1px;
-		color: #1f5373;
-		margin-top: 0;
-	}
-
-	.google-plus {
-		overflow: hidden;
-	}
-
-	li {
-		display: inline-block;
-		text-align: center;
-		padding: 5px 7px;
-
-		a {
-			i {
-				line-height: 1;
-				color: #bbbbbb;
-				.transition(all 0.2s);
-				height: 15px;
-				width: 21px;
-				font-size: 13px;
-				transition: all 0.2s ease-out;
-			}
-		}
-
-		&:hover {
-			background: @theme-color;
-			border: 1px solid @theme-color;
-			cursor: pointer;
-
-			i {
-				color: @white;
-			}
-		}
-	}
-
-	.recent-post {
-		margin-top: 13px;
-
-		a {
-			margin: 0 !important;
-			color: #455f6f;
-		}
-
-		single-author img {
-			vertical-align: middle;
-			height: 40px;
-			width: 40px;
-			margin-right: 10px;
-		}
-
-		.recent-single-post a {
-			font-size: 16px!important;
-		}
-
-		.recent-single-post,
-		.single-author {
-			border-bottom: 1px solid #d5dde8;
-			padding-bottom: 17px;
-			margin-bottom: 17px;
-			line-height: 1.35;
-			padding: 0 0 10px;
-			font-family: 'AvenirNextLTPro-Medium' ,sans-serif;
-
-			.post-title,
-			.single-author-name {
-				font-family: 'AvenirNextLTPro-Medium', sans-serif;
-				.transition(all 0.2s ease);
-				@media(max-width: 600px) {
-					text-align: left;
-				}
-
-				&:hover {
-					color: @theme-color;
-					text-decoration: none;
-				}
-			}
-
-			.date {
-				color: #8091ab;
-				font-size: 13px;
-				opacity: 1;
-				margin-top: 5px;
-				font-family: 'AvenirNextLTPro-Regular', sans-serif;
-
-				i {
-					margin-right: 5px;
-				}
-			}
-
-			&:last-child {
-				margin-bottom: 0;
-				border-bottom: 0;
-			}
-		}
-	}
-
-	.newsletter {
-		width: 100%;
-		padding-top: 0 !important;
-
-		.news-description {
-			margin: 15px 0 20px;
-			font-size: 0.9em;
-			line-height: 1.5;
-			font-family: 'AvenirNextLTPro-Regular', sans-serif;
-		}
-
-		.form-group {
-			width: -webkit-fill-available;
-			width: -moz-fill-available;
-
-			input {
-				width: -webkit-fill-available;
-				width: -moz-fill-available;
-			}
-		}
-
-		.subscribe-input-class {
-			padding: 15px 5%;
-			width: 90%;
-			font-size: 14px;
-			border: 1px solid #ebebeb;
-			margin-bottom: 10px;
-		}
-
-		.form-group,
-		.input-group {
+	.upcoming {
+		p {
 			margin-bottom: 0;
-			display: block;
+		}
 
-			.email {
-				width: 100%;
-			}
+		ul {
+			padding: 10px 0 0;
+		}
+	}
 
-			.btn {
-				width: -webkit-fill-available;
-				width: -moz-fill-available;
-
-				&:hover {
-					background-color: @hover-color;
-					cursor: pointer;
-				}
-
-				span {
-					font-size: 12px;
-					text-transform: capitalize;
-				}
+	.text {
+		h1 {
+			font-size: 1.4em;
+			font-weight: 700;
+			margin-bottom: 15px;
+			letter-spacing: 1px;
+			margin-top: 0;
+			font-family: 'AvenirNextLTPro-Medium',serif;
+			@media(max-width: 1040px) {
+				font-size: 1.3em !important;
 			}
 		}
 
 		p {
-			margin-bottom: 10px;
-			font-size: 16px;
-			font-family: 'AvenirNextLTPro-Medium',sans-serif;
+			margin: 0;
+			font-size: 0.9em;
+			line-height: 1.7;
+			padding-right: 0;
+			font-family: 'AvenirNextLTPro-Regular', sans-serif;
 		}
 	}
-}
 
-.share {
-	.share-icons {
-		padding: 0;
-		margin: 0;
-		display: flex;
-		justify-content: space-between;
+	.widget {
+		margin-bottom: 30px;
+		margin-top: 0;
+
+		.post-title {
+			a {
+				color: #208cad;
+				font-family: 'AvenirNextLTPro-Medium',sans-serif;
+				transition: all 0.2s ease;
+
+				&:hover {
+					cursor: pointer;
+					color: @hover-color;
+				}
+			}
+		}
+
+		h1 {
+			margin-bottom: 10px;
+			text-transform: uppercase;
+			font-size: 1.2em;
+			font-family: 'ProductSans-Medium', AvenirNextLTPro-Medium, serif;
+			color: @header-color;
+			font-weight: 500;
+		}
+
+		.sidebar-title,
+		.title {
+			font-size: 1.2em;
+			font-weight: 500;
+			margin-bottom: 8px;
+			text-transform: uppercase;
+			font-family: 'AvenirNextLTPro-Medium',AvenirNextLTPro-Medium,serif;
+			letter-spacing: 1px;
+			color: #1f5373;
+			margin-top: 0;
+		}
+
+		.google-plus {
+			overflow: hidden;
+		}
 
 		li {
-			list-style: none;
 			display: inline-block;
-			border: 1px solid @border-color;
-			padding: 4px 9px 2px;
-			transition: 0.2s all ease-out;
-			border-radius: 2px;
-			margin-left: 10px;
+			text-align: center;
+			padding: 5px 7px;
 
-			&:hover {
-				color: @white;
-				background: @theme-color;
-
-				a {
-					color: @white;
+			a {
+				i {
+					line-height: 1;
+					color: #bbbbbb;
+					.transition(all 0.2s);
+					height: 15px;
+					width: 21px;
+					font-size: 13px;
+					transition: all 0.2s ease-out;
 				}
 			}
 
+			&:hover {
+				cursor: pointer;
+
+				i {
+					color: @white;
+				}
+			}
+		}
+
+		.recent-post {
+			margin-top: 13px;
+
 			a {
-				color: #c4c4c4;
-				text-align: center;
-				font-size: 18px;
+				margin: 0 !important;
+				color: #455f6f;
+			}
+
+			single-author img {
+				vertical-align: middle;
+				height: 40px;
+				width: 40px;
+				margin-right: 10px;
+			}
+
+			.recent-single-post a {
+				font-size: 16px!important;
+			}
+
+			.recent-single-post,
+			.single-author {
+				border-bottom: 1px solid #d5dde8;
+				padding-bottom: 17px;
+				margin-bottom: 17px;
+				line-height: 1.35;
+				padding: 0 0 10px;
+				font-family: 'AvenirNextLTPro-Medium' ,sans-serif;
+
+				.post-title,
+				.single-author-name {
+					font-family: 'AvenirNextLTPro-Medium', sans-serif;
+					.transition(all 0.2s ease);
+					@media(max-width: 600px) {
+						text-align: left;
+					}
+
+					&:hover {
+						color: @theme-color;
+						text-decoration: none;
+					}
+				}
+
+				.date {
+					color: #8091ab;
+					font-size: 13px;
+					opacity: 1;
+					margin-top: 5px;
+					font-family: 'AvenirNextLTPro-Regular', sans-serif;
+
+					i {
+						margin-right: 5px;
+					}
+				}
+
+				&:last-child {
+					margin-bottom: 0;
+					border-bottom: 0;
+				}
+			}
+		}
+
+		.newsletter {
+			width: 100%;
+			padding-top: 0 !important;
+
+			.news-description {
+				margin: 15px 0 20px;
+				font-size: 0.9em;
+				line-height: 1.5;
+				font-family: 'AvenirNextLTPro-Regular', sans-serif;
+			}
+
+			.form-group {
+				width: -webkit-fill-available;
+				width: -moz-fill-available;
+
+				input {
+					width: -webkit-fill-available;
+					width: -moz-fill-available;
+				}
+			}
+
+			.subscribe-input-class {
+				padding: 15px 5%;
+				width: 90%;
+				font-size: 14px;
+				border: 1px solid #ebebeb;
+				margin-bottom: 10px;
+			}
+
+			.form-group,
+			.input-group {
+				margin-bottom: 0;
+				display: block;
+
+				.email {
+					width: 100%;
+				}
+
+				.btn {
+					width: -webkit-fill-available;
+					width: -moz-fill-available;
+
+					&:hover {
+						background-color: @hover-color;
+						cursor: pointer;
+					}
+
+					span {
+						font-size: 12px;
+						text-transform: capitalize;
+					}
+				}
+			}
+
+			p {
+				margin-bottom: 10px;
+				font-size: 16px;
+				font-family: 'AvenirNextLTPro-Medium',sans-serif;
+			}
+		}
+	}
+
+	.share {
+		.share-icons {
+			padding: 0;
+			margin: 0;
+			display: flex;
+			justify-content: space-between;
+
+			li {
+				list-style: none;
+				display: inline-block;
+				border: 1px solid @border-color;
+				padding: 4px 9px 2px;
+				transition: 0.2s all ease-out;
+				border-radius: 2px;
+				margin-left: 10px;
+
+				&:hover {
+					color: @white;
+					background: @theme-color;
+
+					a {
+						color: @white;
+					}
+				}
+
+				a {
+					color: #c4c4c4;
+					text-align: center;
+					font-size: 18px;
+				}
 			}
 		}
 	}
 }
-
 /* Hack for aligning magnifying glass on other pages */
 .page-template .search::after {
-	 top: 14px;
+	top: 14px;
 }
