--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -141,7 +141,7 @@
 				<div class="projectdropdown">
 					<div class="dropdown">
 				  <ul>
-				    <li class="picker">Select a Project <i class="fas fa-caret-down"></i>
+				    <li class="picker"><span style="display:block">Select a Project</span><i class="fas fa-caret-down"></i>
 				      <ul class="dropdown-list">
 				        <li class="stockholmproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-stockholm </li>
 				        <li class="tokyoproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-tokyo </li>
@@ -149,7 +149,7 @@
 								<li class="apiproject"><i class="fal fa-chart-network"  style="color:#c090c0;"></i> hackersandslackers-api </li>
 				      </ul>
 				    </li>
-						<li class="mobilemenu">Select a Project <i class="fas fa-caret-down"></i>
+						<li class="mobilemenu"><span>Select a Project</span> <i class="fas fa-caret-down"></i>
 				      <ul class="dropdown-list" style="display:none;">
 				        <li class="stockholmproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-stockholm </li>
 				        <li class="tokyoproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-tokyo </li>
