--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -245,10 +245,9 @@
 				}
 
 				.mobile-name {
-					margin-bottom: 8px;
-					font-family: 'ProductSans-Regular';
-					font-size: 1.1em;
-					line-height: 1;
+					margin-bottom: 2px;
+					font-family: 'AvenirNextLTPro-Medium', sans-serif;
+					letter-spacing: .2px;
 				}
 
 				.mobile-date {
@@ -277,7 +276,7 @@
 			padding: 0;
 			margin: auto 20px auto 0;
 			@media(max-width: 1000px) {
-				margin: auto 30px auto 0 !important;
+				margin: auto 40px auto 0 !important;
 			}
 
 			&:last-of-type {
