--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -317,6 +317,10 @@
 				box-shadow: 0 0 3px 1px rgba(95, 93, 138, 0.15);
 				opacity: 0.99;
 				padding: 0;
+
+				@media(max-width: 950px) {
+					box-shadow: none;
+				}
 			}
 
 			.fab,
