--- a/src/less/pages/about-page.less
+++ b/src/less/pages/about-page.less
@@ -26,7 +26,7 @@
   figure {
     margin: 0;
     @media(max-width: 600px) {
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
   }
 
@@ -49,6 +49,10 @@
   .about-content {
     & > p {
       margin: 0 44px 20px !important;
+
+      @media(max-width: 600px) {
+        margin: 0 30px 20px !important;
+      }
     }
     @media(max-width: 800px) {
       display: flex;
