--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -42,7 +42,7 @@
     text-rendering: auto;
     text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.6) !important;
     content: "Code Snippet";
-    background: #242842;
+    background: rgba(36, 40, 66, .6);
     mix-blend-mode: color-dodge;
     border-bottom: 1px solid #293d5c;
     @media(max-width: 600px) {
