--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -6,14 +6,14 @@
 	{{/if}}
 	{{!-- Actual place where the numbers will go --}}
 	<div id="pagination-list" class="page-number">
-		{{!-- Placeholder for number of total pages --}}
-		<div id="page-total" style="display:none;">{{pages}}</div>
 		{{!-- Placeholder for current page --}}
 		<div id="page-current" style="display:none;">{{page}}</div>
 		{{#if next}}
 			<a class="older-posts" href="{{page_url next}}"><i class="fas fa-arrow-right"></i></a>
 		{{/if}}
 	</div>
+	{{!-- Placeholder for number of total pages --}}
+	<div class="total-count">of <span id="page-total">{{pages}}</span></div>
 </nav>
 
 <script>
