--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -31,7 +31,7 @@
         {{primary_author.bio}}
           {{!--{{#unless profile_image}}--}}
             <a href="{{url}}" class="meta-item author"><i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
-            <a href="{{url}}" class="meta-item author-mobile"><i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><div class="info"><span>{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
+            <a href="{{url}}" class="meta-item author-mobile"><!--<i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i>--><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
         {{!--  {{/unless}}
           {{#if profile_image}}
             <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} avatar" class="avi" data-rjs="3"><span>{{name}}</span></a>
