--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -87,7 +87,12 @@
 				margin: auto 0;
 				min-width: 17%;
 				@media(max-width: 800px) {
-					max-width: 15%;
+			    width: 13%;
+			    min-width: none !important;
+					border: 1px solid #eaeaea;
+				}
+				@media(max-width: 600px) {
+			    border: none;
 				}
 
 				&:before {
@@ -164,7 +169,7 @@
 				i {
 					margin: auto;
 					color: #a3a7b2;
-					font-size: 19px;
+					font-size: 23px;
 					display: block;
 					width: fit-content;
 				}
