--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -1,5 +1,152 @@
 @import "../global/variables.less";
 
+.tag-template {
+  .postlist {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    article {
+      margin-bottom: 20px;
+
+      .content {
+        position: relative;
+        margin: 15px;
+        padding: 0;
+        height: -moz-fill-available;
+        height: -webkit-fill-available;
+        display: block;
+      }
+    }
+
+    .series-cover {
+      background-size: cover;
+      background-position-y: center;
+      height: 300px;
+      background-color: #192e4c;
+      background-blend-mode: soft-light;
+      @media(max-width: 600px) {
+        margin-left: calc(~"-50vw + 50%") !important;
+        margin-right: calc(~"-50vw + 50%") !important;
+        margin-top: -20px;
+      }
+
+      .tag-name {
+        font-size: 2.2em;
+        color: white !important;
+        font-family: 'AvenirNextLTPro-Regular';
+        text-shadow: 0 0 20px #2f2d56;
+        margin-top: 110px;
+      }
+
+      .tag-description {
+        font-weight: 600;
+        line-height: 1.5;
+        max-width: 90%;
+        margin: 20px auto 0;
+        color: white;
+        font-family: AvenirNextLTPro-Regular;
+        text-shadow: 2px 2px 0 #15133c, 2px 2px 10px #15133c;
+        font-size: 1.2em;
+      }
+    }
+
+    article {
+      width: 49%;
+      height: 450px;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      @media(max-width: 600px) {
+        width: 100%;
+      }
+
+      .post-head {
+        margin: 0;
+      }
+
+      .post-title {
+        font-size: 1.4em;
+
+        a {
+          font-family: 'ProductSans-Medium','',sans-serif;
+          font-weight: 500;
+        }
+      }
+
+      .featured-media {
+        display: block;
+        margin: auto;
+        background-size: cover;
+        height: 200px;
+        width: 100%;
+      }
+
+      .post-excerpt {
+        -webkit-line-clamp: 3;
+        display: -webkit-box;
+        min-height: 80px;
+        margin-bottom: 55px;
+        overflow: hidden;
+        font-family: 'AvenirNextLTPro-Regular';
+        font-size: 1em !important;
+        text-overflow: ellipsis;
+        font-weight: 600;
+
+        @media(max-width: 600px){
+          font-size: .95em !important;
+        }
+      }
+
+      .post-permalink {
+        position: absolute;
+        bottom: 0;
+        width: -webkit-fill-available;
+        padding: 10px 0 0;
+
+        .btn {
+          padding: 12px 20px;
+          font-size: 16px;
+          font-family: AvenirNextLTPro-Regular,sans-serif;
+
+          a {
+            line-height: 1;
+            height: fit-content;
+          }
+          &:hover {
+            background: @button-hover;
+            color: white;
+          }
+          @media(max-width: 600px) {
+            display: block !important;
+          }
+        }
+      }
+
+      .author,
+      .tags,
+      p {
+        display: none !important;
+      }
+    }
+  }
+}
+
+
+.tag-template {
+  .tag-image {
+    width: 100%;
+    height: 370px;
+    background-size: cover !important;
+  }
+
+  .post-title a {
+    font-size: 1em !important;
+    font-family: 'ProductSans-Regular',sans-serif;
+  }
+}
+
 .tag-template .post-preview {
   padding:0 !important;
 }
