--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -8,7 +8,7 @@
   line-height: 1.7;
   padding: 0 25px 20px;
   white-space: pre-wrap !important;
-  color: #d3dce0;
+  color: #e4edf1;
   font-weight: 400;
   font-family: 'Hack';
   @media(max-width: 600px) {
