fixing everything at this point

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -584,7 +584,8 @@
 			font-family: 'AFParseGroteskMono-Regular;',sans-serif;
 			font-style: normal !important;
 			font-size: 0.9em !important;
-			background: rgba(41, 61, 76, 0.8) !important;
+			background: rgba(205, 227, 244, 0.8) !important;
+    	color: #305a68;
 		}
 
 		a {
