--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -166,7 +166,7 @@
 .tag {
   .nodejs {
     color: #69a202 !important;
-    background-color: lighten(#83cc00, 55%);
+    background-color: #f1feda;
 
     * {
       color: #69a202 !important;
@@ -209,7 +209,7 @@
     }
   }
 
-  .apis {
+  .restapis {
     color: #763EA9 !important;
     background-color: lighten(#763EA9, 45%);
 
@@ -274,7 +274,7 @@
 
   .googlecloud {
     color: #1990f5 !important;
-    background-color: lighten(#1990f5, 30%);
+    background-color: #d9eeff;
 
     * {
       color: #1990f5 !important;
@@ -283,7 +283,7 @@
 
   .mysql {
     color: #7a588e !important;
-    background-color: lighten(#7a588e, 30%);
+    background-color: #e4daea;
 
     * {
       color: #7a588e !important;
@@ -407,7 +407,7 @@
     }
   }
 
-  .postgres {
+  .postgresql {
     background: #a9b8d7;
     color: #425167;
 
@@ -418,7 +418,7 @@
 
   .bigdata{
     color: #12b3a3;
-    background: #d3ffef;
+    background: #ddf4eb;
 
     * {
       color: #12b3a3 !important;
