--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -19,6 +19,8 @@
     display: inline-block;
     overflow: hidden;
     margin-right: 30px;
+    border-radius: 2px;
+    border: 1px solid #3f588080;
     @media(max-width: 600px) {
       width: 80px;
       height: 80px;
@@ -39,7 +41,7 @@
       display: block;
       line-height: 1em;
       margin-bottom: 8px;
-      font-size: 0.96em;
+      font-size: 0.9em;
 
       i {
         margin-right: 8px;
@@ -53,7 +55,7 @@
     margin-top: 10px;
     width: 100%;
     clear: both;
-    font-size: 0.96em;
+    font-size: 0.9em;
     color: #464a56;
     font-weight: 500;
   }
@@ -103,6 +105,7 @@
     font-family: 'AvenirNextLTPro-Medium';
     color: #5D6178;
     font-size: .9em;
+    font-weight: 600;
   }
 
   .authormeta {
@@ -110,6 +113,7 @@
     justify-content: left;
     align-items: center;
     width: 100%;
+    margin: 13px 0;
 
 
     & > span {
