--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -160,14 +160,16 @@
 	}
 
 	h2 {
-		margin: 40px 0 10px;
+		margin: 40px 0 12px;
 		color: #276890;
 		line-height: 1.3;
 		font-family: 'ProductSans-Regular';
 		font-weight: 400!important;
 		font-size: 1.7em;
 		width: fit-content;
-		padding-right: 10px;
+		width: 100%;
+    border-bottom: 1px solid #d2e5f4;
+    padding-bottom: 6px;
 		@media(max-width: 800px) {
 			font-size: 1.9em;
 			padding-bottom: 9px;
@@ -189,7 +191,7 @@
 		font-size: 1.3em;
 		line-height: 1.2;
 		color: #365c8e;
-		font-weight: 500;
+		font-weight: 600;
 		margin-top: 50px;
 		color: @header-color;
 		margin-bottom: 8px;
@@ -448,7 +450,7 @@
 			font-style: normal;
 			font-variant: normal;
 			text-rendering: auto;
-			margin: 20px 15px;
+			margin: 20px 40px 20px 25px;
 			padding-left: 0;
 			line-height: 1.4;
 			display: block;
@@ -468,7 +470,7 @@
 			-webkit-font-smoothing: antialiased;
 			padding-left: 0;
 			font-family: "Font Awesome 5 Pro";
-			content: "\f101";
+			content: "\f111";
 			font-size: 13px;
 			margin-right: 10px;
 			font-weight: 600;
