small adjustments to projects page

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -29,7 +29,7 @@
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-code-fork" aria-hidden="true"></i>
+							<i class="far fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -49,7 +49,7 @@
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-code-fork" aria-hidden="true"></i>
+							<i class="far fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -69,7 +69,7 @@
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-code-fork" aria-hidden="true"></i>
+							<i class="far fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -89,7 +89,7 @@
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-code-fork" aria-hidden="true"></i>
+							<i class="far fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -109,7 +109,7 @@
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-code-fork" aria-hidden="true"></i>
+							<i class="far fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -129,7 +129,7 @@
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-code-fork" aria-hidden="true"></i>
+							<i class="far fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -141,7 +141,7 @@
 				<div class="projectdropdown">
 					<div class="dropdown">
 				  <ul>
-				    <li class="picker"><span style="display:block">Select a Project</span><i class="fas fa-caret-down"></i>
+				    <li class="picker"><span>Select a Project</span><i class="fas fa-caret-down"></i>
 				      <ul class="dropdown-list">
 				        <li class="stockholmproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-stockholm </li>
 				        <li class="tokyoproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-tokyo </li>
