--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -29,7 +29,7 @@
 
 		a {
 			background: #e7eefa;
-			color: #778aa5;
+			color: #5b6a80;
 			font-size: 0.8em;
 			margin-right: 15px;
 			transition: all 0.3s;
@@ -169,7 +169,7 @@
 				i {
 					margin: auto;
 					color: #a3a7b2;
-					font-size: 23px;
+					font-size: 20px;
 					display: block;
 					width: fit-content;
 				}
