--- a/src/less/projects/repos.less
+++ b/src/less/projects/repos.less
@@ -69,10 +69,13 @@
 .github-card__meta {
   margin-right: @spacing;
 
-  > i {
+  i {
     font-size: 14px;
+    margin-right: 3px !important;
+  }
+
+  .fa-star {
     color: #efc143;
-    margin-right: 3px;
   }
 }
 
