--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -62,7 +62,8 @@
 
   .author {
     font-size: 1.5em;
-    margin-bottom: 10px;
+    margin-bottom: 0;
+    line-height: 1;
     font-family: 'AvenirNextLTPro-Medium', '';
     @media(max-width: 600px) {
       font-size: 1.3em;
