--- a/src/less/projects/repos.less
+++ b/src/less/projects/repos.less
@@ -10,6 +10,10 @@
   width: 100%;
   color: white;
   justify-content: space-between;
+
+  @media(max-width: 600px) {
+        margin-top: 10px;
+  }
 }
 
 .repo-title {
@@ -41,12 +45,14 @@
   border-radius: 3px;
   @media(max-width: 600px) {
     min-width: 100%;
+    margin: 0 0 8px;
   }
 
   h3 {
     margin-top: 0;
     color: @color-github;
     font-size: 18px !important;
+    line-height: 1;
 
     &:hover {
       color: white;
