--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,5 +1,6 @@
 <!-- Start Scripts -->
 <!--<script src="{{asset "/js/lazy-load.min.js"}}"></script>-->
+<script src="{{asset "/js/includes/retina.min.js"}}"></script>
 {{#is "post"}}
 <script src="{{asset "/dist/posts.js"}}"></script>
   {{#has author="Matt Alhonte"}}
