--- a/src/less/global/menu.less
+++ b/src/less/global/menu.less
@@ -52,7 +52,7 @@ header {
 
 
 .navigation {
-  background: white;
+  background: #26313c;
   height: 50px;
   text-align: center;
   position: relative;
@@ -84,11 +84,11 @@ header {
     }
 
     a {
-      font-family: 'ProductSans-Medium';
+      font-family: 'ProductSans-Regular';
       font-size: .9em;
       text-transform: uppercase;
       transform: scale(1);
-      color: #505f77;
+      color: #fff;
       font-weight: 500;
       transition: all .15s ease-out;
       position: absolute;
