--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -454,7 +454,7 @@
 			line-height: 1.4;
 			display: block;
 			@media(max-width: 600px) {
-				margin-left: 0;
+				margin: 20px 0 20px 20px;
 			}
 		}
 	}
@@ -470,8 +470,8 @@
 			padding-left: 0;
 			font-family: "Font Awesome 5 Pro";
 			content: "\f111";
-			font-size: 13px;
-			margin-right: 10px;
+			font-size: 9px;
+			margin-right: 9px;
 			font-weight: 500;
 			@media(max-width: 600px) {
 				margin-left: 0;
