removed dev share button, link preview mobile updates

--- a/partials/share_links.hbs
+++ b/partials/share_links.hbs
@@ -16,7 +16,7 @@
 		<a href="javascript:window.location=%22https://news.ycombinator.com/submitlink?u=%22+encodeURIComponent(document.location)+%22&t=%22+encodeURIComponent(document.title)"><i class="fab fa-y-combinator"></i></a>
 	</li>
 	<!-- dev.to -->
-	<li class="btn devto">
+	<!--<li class="btn devto">
 		<a href="https://dev.to/hackersandslackers"><i class="fab fa-dev"></i></i></a>
-	</li>
+	</li>-->
 </ul>
