--- a/post.hbs
+++ b/post.hbs
@@ -77,14 +77,11 @@
 					{{> prev-next}}
 				</div>
 				<!-- end main post area -->
-
 	</div>
 </section>
-
 {{#has tag="Roundup"}}
-	<script src="{{asset "/js/includes/previews.js"}}"></script>
+	<script src="{{asset "/js/previews.js"}}"></script>
 {{/has}}
-
 {{/post}}
 <!-- end post -->
 <!-- end site's main content area -->
