--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -19,7 +19,7 @@
     overflow: hidden;
     margin-right: 30px;
     border-radius: 2px;
-    border: 1px solid #3f588080;
+    border: 1px solid rgba(40, 98, 190, 0.5);
     @media(max-width: 600px) {
       width: 80px;
       height: 80px;
