--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -214,7 +214,7 @@
 
     .title-desktop {
       margin: 0 0 10px!important;
-      font-family: 'AvenirNextLTPro-Regular',serif;
+      font-family: 'AvenirNextLTPro-Medium',serif;
       font-size: 1.3em;
       line-height: 1.3;
       text-align: left;
@@ -274,7 +274,6 @@
         white-space: normal;
         height: fit-content;
         max-height: none;
-        margin: 5px 0 !important;
       }
     }
   }
