fixed header bug

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -3,7 +3,7 @@
 <!-- start site's main content area -->
 <script src="{{asset "js/slick.min.js"}}"></script>
 <section class="content-wrap archive">
-	{{> postheader}}
+	{{> header}}
 	<div class="container">
 		<!-- start post -->
 		{{#post}}
