--- a/custom-resources.hbs
+++ b/custom-resources.hbs
@@ -4,7 +4,7 @@
 <script src="{{asset "/dist/resources.js"}}"></script>
 
 <section class="content-wrap archive page-resources">
-  {{> postheader}}
+  {{> header}}
   <div class="container">
     <!-- start post -->
     {{#post}}
